# fasttrace

./: .gitignore  Makefile  pyproject.toml  readme.md
fasttrace/: main.py  models.py  tracing.py
tests/: test_fasttrace.py
